More consistent non-home pages, darker $offblack, fixed hero image

--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -15,7 +15,8 @@ $mltgray:	#ccc;
 $ltgray:    #999;
 $midgray:   #666;
 
-$offblack:  #333;
+$vdkgray:   #333;
+$offblack:  #111;
 
 $highlight: #7fdbff;
 
