--- a/css/_comments.scss
+++ b/css/_comments.scss
@@ -53,7 +53,7 @@ img.avatar-67 {
 .comment-awaiting-moderation {
 	background: #FFEB3B;
 	border: 2px solid #FBC02D;
-	color: $offblack;
+	color: $vdkgray;
 	display: block;
 	font-size: .8rem;
 	font-style: normal;
