--- a/css/_story-card.scss
+++ b/css/_story-card.scss
@@ -24,7 +24,7 @@
 
 .story-card > a {
 	background-color: $ultgray;
-	color: $offblack;
+	color: $vdkgray;
 	display: inline-block;
 	height: 100%;
 	min-height: 300px;
@@ -32,7 +32,7 @@
 	padding: 0;
 	position: relative;
 	text-decoration: none;
-	@include transition( all .5s ease );
+	@include transition( background .5s ease );
 	width: 100%;
 }
 
@@ -133,7 +133,7 @@
 		.text { margin: .5rem; }
 		
 		h2 { 
-			color: $offblack;
+			color: $vdkgray;
 		}
 		
 		p.continue {
@@ -173,7 +173,7 @@
 		}
 		
 		h2 { 
-			color: $offblack;
+			color: $vdkgray;
 		}
 		
 		p.continue {
@@ -496,6 +496,10 @@
 		margin-bottom: 1rem;
 	}
 	
+	.card-row:not(.card-row-short) > .card-img.card-half > a > .text {
+		max-width: 65%;
+	}
+	
 	.card-img.card-quarter a p.teaser {
 		background-color: transparent;
 		box-decoration-break: clone;
@@ -577,11 +581,20 @@
 
 @media (min-width: 1200px) {
 	
+	.card-txt.card-half.card-tall,
 	.card-txt.card-quarter,
 	.card-row-4 .card-txt {
 		a {
 			h2 { font-size: 1.5rem; }
 			p.teaser { font-size: 1rem; }
+		}
+	}
+	
+	.card-txt.card-half:not(.card-tall) {
+		a {
+			p.teaser { 
+				font-size: 1rem;
+			}
 		}
 	}
 	
