--- a/css/style.scss
+++ b/css/style.scss
@@ -22,7 +22,7 @@ body, html { overflow-x: hidden; width:100%; height:100%; }
 
 body { 
 	background-color: $bodybg; 
-	color: $offblack;
+	color: $vdkgray;
 	font-family: 'Lato', sans-serif; 
 	font-weight: 400; 
 }
@@ -60,7 +60,7 @@ rows {
 /* ======================================================================== */
 
 h1 {
-	color: $offblack;
+	color: $vdkgray;
 	text-align: left;
 	margin: auto;
 	font-weight: 300;
@@ -68,18 +68,18 @@ h1 {
 }
 
 .site-title {
-	color: $offblack;
+	color: $vdkgray;
 	text-align: center;
 	margin: auto;
 	font-weight: 300;
 	font-size: 3.5rem;
 }
 
-h1 a, h1 a:hover { color: $offblack; text-decoration: none; }
+h1 a, h1 a:hover { color: $vdkgray; text-decoration: none; }
 
 .site-title > a,
 .site-title > a:hover {
-	color: $offblack;
+	color: $vdkgray;
 	text-decoration: none;
 }
 
@@ -245,6 +245,15 @@ article > content .article-tags header {
 	padding-top: 2rem;
 }
 
+body:not(.single) .single-basic-intro,
+body:not(.single) .content-part {
+	border: none;
+}
+
+body:not(.single) article > content {
+	border-bottom-width: 1px;
+}
+
 .single-basic-intro h1 {
 	font-size: 2rem;
 	font-weight: 700;
@@ -290,7 +299,7 @@ article > content .article-tags header {
 .author-social { flex-grow: 2; text-align: right; }
 
 .author-pubdate .author {
-	color: $offblack;
+	color: $vdkgray;
 	font-size: 1rem;
 	font-style: normal;
 	font-weight: 700;
@@ -470,12 +479,12 @@ article > content .adjacent-post-inner p > a { color: $ltgray; text-decoration: 
 article > content .adjacent-post-inner p > a:hover { color: $voablue; text-decoration: none; }
 
 article > content .adjacent-post-inner h4 {
-	color: $offblack;
+	color: $vdkgray;
 	font-size: .8em;
 	font-weight: 700;
 }
 
-article > content .adjacent-post-inner h4 > a { color: $offblack; text-decoration: none; }
+article > content .adjacent-post-inner h4 > a { color: $vdkgray; text-decoration: none; }
 article > content .adjacent-post-inner h4 > a:hover { color: $voablue; text-decoration: none; }
 
 
@@ -525,7 +534,7 @@ div.sidebar-widget li {
 }
 
 div.sidebar-widget a {
-	color: $offblack;
+	color: $vdkgray;
 	text-decoration: none;
 }
 
@@ -606,7 +615,7 @@ article > content .comments {
 }
 
 article > content .comments > header {
-	background: $offblack none repeat scroll 0 0;
+	background: $vdkgray none repeat scroll 0 0;
 	color: $offwhite;
 	font-size: 0.8em;
 	margin-bottom: 1em;
@@ -946,6 +955,10 @@ article > content .comments .comments-inner {
 
 /* mobile-first styles ***************************************************************************/
 
+.big-screen {
+	display: none;
+}
+
 .site-title {
 	line-height: 1;
 	margin: 1rem auto;
@@ -996,6 +1009,7 @@ article > content .comments .comments-inner {
 }
 
 .site-nav {
+	align-items: center;
 	display: flex;
 	flex-grow: 1;
 	justify-content: flex-end;
@@ -1047,6 +1061,12 @@ article > content .comments .comments-inner {
 	border-left: 4px solid $voablue;
 	color: $voablue;
 	font-weight: 600;
+}
+
+.site-nav > .header-nav-newsletter-link {
+	font-size: .9rem;
+	letter-spacing: 0.025em;
+	text-transform: uppercase;
 }
 
 
@@ -1173,12 +1193,12 @@ article > content .comments .comments-inner {
 
 .hero-dark-on-light .hero-title > * {
 	background: rgba(255, 255, 255, .6);
-	color: $offblack;
+	color: $vdkgray;
 }
 
 .hero-dark-no-bg .hero-title > * {
 	background: transparent;
-	color: $offblack;
+	color: $vdkgray;
 }
 
 
@@ -1238,7 +1258,7 @@ article > content .comments .comments-inner {
 
 
 .blog-footer {
-	background: $offblack;
+	background: $vdkgray;
 	font-size: .9rem;
 	width: 100%;
 }
@@ -1372,6 +1392,8 @@ article > content .comments .comments-inner {
 	
 	.hero-title > h1 { font-size: 2rem; }
 	.hero-title > h2 { font-size: 1.2rem; }
+	
+	.header-nav-newsletter-link .big-screen { display: inline; }
 	
 }
 
