--- a/style.css
+++ b/style.css
@@ -144,8 +144,12 @@ header, rows, footer {
 
 rows {
   display: flex;
-  margin: auto;
+  flex-direction: column;
+  margin: 0 auto 1rem auto;
   max-width: 1200px; }
+
+body > rows:first-of-type {
+  margin-bottom: 0; }
 
 /* ======================================================================== */
 h1 {
@@ -155,13 +159,13 @@ h1 {
   font-weight: 300;
   font-size: 3.5rem; }
 
-.site-title {
-  color: #333;
-  text-align: center;
-  margin: auto;
-  font-weight: 300;
-  font-size: 3.5rem; }
-
+/*.site-title {
+	color: $vdkgray;
+	text-align: center;
+	margin: auto;
+	font-weight: 300;
+	font-size: 3.5rem;
+}*/
 h1 a, h1 a:hover {
   color: #333;
   text-decoration: none; }
@@ -202,11 +206,6 @@ breakup h2 {
   color: #999; }
 
 /* ======================================================================== */
-rows {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1rem; }
-
 rows row.rows_1, rows row.rows_2, rows row.rows_3 {
   display: flex;
   flex-direction: row; }
@@ -241,7 +240,7 @@ article > content {
   width: 65.666666%; }
 
 .archive article > content {
-  padding-top: 2rem; }
+  padding-top: 1rem; }
 
 .single article > content,
 .archive article > content .content-part,
@@ -310,7 +309,10 @@ article > content .article-tags header {
   border-color: #ddd;
   border-style: solid;
   border-width: 1px 1px 0 1px;
-  padding-top: 2rem; }
+  padding-top: 1rem; }
+
+body.archive .single-basic-intro {
+  padding-top: 0; }
 
 body:not(.single) .single-basic-intro,
 body:not(.single) .content-part {
@@ -682,7 +684,6 @@ article > content .comments .comments-inner {
 /* ARCHIVE PAGE **************************************************************/
 .page .archive-date > breakup,
 .archive .archive-date > breakup {
-  background-color: #eee;
   padding: 2rem 0; }
 
 .archive-teasers {
@@ -930,9 +931,13 @@ article > content .comments .comments-inner {
   display: none; }
 
 .site-title {
+  color: #333;
+  font-weight: 300;
+  font-size: 2.5rem;
   line-height: 1;
-  margin: 1rem auto;
-  padding: 0; }
+  margin: 1.5rem auto;
+  padding: 0;
+  text-align: center; }
 
 .voa-masthead {
   background: #1330bf;
@@ -1805,6 +1810,16 @@ p.comment-form-url {
   .site-title {
     margin: 2rem auto; }
 
+  .single-basic-intro {
+    padding-top: 2rem;
+    padding-bottom: 2rem; }
+
+  .archive article > content {
+    padding-top: 2rem; }
+
+  body.archive .single-basic-intro {
+    padding-top: 0; }
+
   .article-body > .alignleft {
     margin-left: -4rem;
     width: calc(50% + 4rem) !important; }
@@ -1876,6 +1891,7 @@ p.comment-form-url {
     display: inline; } }
 @media (min-width: 960px) {
   .site-title {
+    font-size: 3.5rem;
     margin: 3rem auto; }
 
   .author .author-avatar {
