--- a/style.css
+++ b/style.css
@@ -267,6 +267,9 @@ article > content .article-categories,
 article > content .article-tags {
   padding-bottom: 2rem; }
 
+article > content .article-body {
+  padding-top: 1px; }
+
 article > content .article-tags,
 article > content .adjacent-post {
   border-bottom: 1px solid #ddd; }
