--- a/style.css
+++ b/style.css
@@ -324,7 +324,8 @@ body:not(.single) .content-part {
 body:not(.single) article > content {
   border-bottom-width: 1px; }
 
-.single-basic-intro h1 {
+.single-basic-intro h1,
+.author-bio-box h1 {
   font-size: 2rem;
   font-weight: 700;
   margin-bottom: 0;
@@ -357,7 +358,7 @@ body:not(.single) article > content {
 .single .author-avatar {
   height: 67px;
   width: 67px;
-  margin-right: .5rem; }
+  margin-right: 1rem; }
 
 .single .author-avatar img {
   border-radius: 36px;
@@ -853,7 +854,8 @@ article > content .comments .comments-inner {
     padding-left: 0;
     padding-right: 0; }
 
-  .single-basic-intro h1 {
+  .single-basic-intro h1,
+  .author-bio-box h1 {
     font-size: 1.5em;
     font-weight: 700;
     padding: 0 1rem; }
@@ -1592,11 +1594,12 @@ article > content .comments .comments-inner {
 .author-bio-box .author-avatar {
   float: left;
   margin: 0 1rem .5rem 0;
+  overflow: hidden;
   height: 80px;
   width: 80px; }
 
 .author-bio-box .author-avatar img {
-  border-radius: 10px; }
+  /* border-radius: 10px; */ }
 
 .author-bio-box h1 {
   margin-bottom: .5rem;
@@ -1877,7 +1880,6 @@ p.comment-form-url {
 
   .author-bio-box .author-avatar {
     height: 120px;
-    margin-right: 2rem;
     width: 120px; }
 
   .article-excerpt > a {
