--- a/style.css
+++ b/style.css
@@ -1826,6 +1826,10 @@ p.comment-form-url {
   background: #388E3C;
   cursor: pointer; }
 
+p.no-comments {
+  font-weight: 700;
+  padding: 2rem .5rem 1rem .5rem; }
+
 @media (min-width: 450px) {
   p.comment-form-author,
   p.comment-form-email,
