Updated CSS major version number

--- a/css/_story-card.scss
+++ b/css/_story-card.scss
@@ -357,6 +357,7 @@
 		padding: .2rem 0;
 	}
 	
+	//.card-img.card-full a p.teaser,
 	.card-img.card-full a:hover p.teaser,
 	.card-img.card-half a:hover p.teaser {
 		background-color: $offblack;
