Tied localization to VOA options plugin; added date localization support

--- a/css/style.scss
+++ b/css/style.scss
@@ -1344,7 +1344,7 @@ article > content .comments .comments-inner {
 	margin-bottom: .3rem !important;
 }
 
-p.excerpt-meta .excerpt-date,
+p.excerpt-meta .pubdate,
 p.excerpt-meta .excerpt-author {
 	color: $ltgray;
 	font-size: .8rem;
