--- a/style.css
+++ b/style.css
@@ -1686,7 +1686,7 @@ article > content .comments .comments-inner {
   line-height: 1 !important;
   margin-bottom: .3rem !important; }
 
-p.excerpt-meta .excerpt-date,
+p.excerpt-meta .pubdate,
 p.excerpt-meta .excerpt-author {
   color: #999;
   font-size: .8rem; }
