Sidebar widget style improvements

--- a/css/style.scss
+++ b/css/style.scss
@@ -511,16 +511,18 @@ sidebar-inner {
 	padding-right:1.50%;
 }
 
-sidebar h2 {
+.sidebar-title {
 	border-bottom: 4px solid $voablue;
-	font-size:0.8em;
+	font-size: 0.8em;
 	color: $voablue;
+	margin-bottom: 1.25em;
 	padding-bottom: .25em;
 	padding-left: 1em;
 	text-transform: uppercase;
 }
-sidebar h2 a,
-sidebar h2 a:hover {
+
+.sidebar-title a,
+.sidebar-title a:hover {
 	color: $voablue !important;
 	text-decoration: none !important;
 }
@@ -1264,6 +1266,14 @@ article > content .comments .comments-inner {
 	margin-bottom: .5rem;
 }
 
+/* .article-body h3 {
+	font-size: 1.5rem;
+	font-weight: 700;
+	line-height: 1.35;
+	margin: 0;
+	padding: 1.5rem 0 .5rem 0;
+} */
+
 .article-body a {
 	text-decoration: none;
 }
@@ -1400,6 +1410,18 @@ p.excerpt-meta .excerpt-author {
 .screen-reader-text {
 	display: none;
 	visibility: hidden;
+}
+
+.sidebar-widget .textwidget {
+	font-size: 15px;
+	line-height: 1.66;
+}
+
+.sidebar-widget .textwidget img.alignleft {
+	float: left;
+	height: auto !important;
+	margin: .3rem 1rem .66rem 0;
+	width: 50% !important;
 }
 
 
