--- a/css/style.scss
+++ b/css/style.scss
@@ -1426,6 +1426,107 @@ p.excerpt-meta .excerpt-author {
 
 
 
+
+
+.top-tags-widget .top-tags,
+.widget_archive ul,
+.widget_categories ul {
+	font-size: 1rem;
+	line-height: 2em;
+	margin: .8em;
+}
+
+.top-tags-widget .tags,
+.widget_archive > ul,
+.widget_categories > ul {
+	list-style: none;
+	margin: 0;
+	overflow: hidden;
+	padding: 0;
+}
+
+.widget_archive > ul,
+.widget_categories > ul {
+	margin: .8em;
+}
+
+.top-tags-widget .tags li,
+.widget_archive > ul > li,
+.widget_categories > ul > li {
+	background-color: $ultgray;
+	border-color: $ultgray;
+	border-style: solid;
+	border-width: 1px;
+	color: #ccc;
+	font-size: 1em;
+	margin-bottom: .5em;
+	padding: 0;
+}
+
+.widget_archive > ul > li,
+.widget_categories > ul > li { color: $ultgray; }
+
+.top-tags-widget .tag,
+.widget_archive > ul > li > a,
+.widget_categories > ul > li > a {
+	background: #fff;
+	color: $voablue;
+	display: inline-block;
+	height: 2em;
+	line-height: 2em;
+	padding: 0 1.5em 0 .66em;
+	position: relative;
+	text-decoration: none;
+	transition: all 0.2s;
+}
+
+.top-tags-widget .tag::after,
+.widget_archive > ul > li > a::after,
+.widget_categories > ul > li > a::after {
+	background: $ultgray;
+	border-bottom: 1em solid transparent;
+	border-left: 1em solid #fff;
+	border-top: 1em solid transparent;
+	content: '';
+	position: absolute;
+	right: 0;
+	top: 0;
+	transition: all 0.2s;
+}
+
+.top-tags-widget .tag:hover,
+.widget_archive > ul > li > a:hover,
+.widget_categories > ul > li > a:hover {
+	background-color: $voared;
+	color: #fff;
+	text-decoration: none;
+	transition: all 0.2s;
+}
+
+.top-tags-widget .tag:hover::after,
+.widget_archive > ul > li > a:hover::after,
+.widget_categories > ul > li > a:hover::after {
+	border-left-color: $voared;
+	transition: all 0.2s;
+}
+
+.top-tags-widget .tag-count,
+.widget_archive > ul > li > *:not(a),
+.widget_categories > ul > li > *:not(a) {
+	color: $ltgray;
+	float: right;
+	font-size: .75em;
+	font-weight: 300;
+	padding-right: .66rem;
+	text-decoration: none;
+	text-transform: uppercase;
+}
+
+
+
+
+
+
 /* comments **************************************************************************************/
 
 @import 'comments';
