--- a/style.css
+++ b/style.css
@@ -1747,6 +1747,92 @@ p.excerpt-meta .excerpt-author {
   margin: .3rem 1rem .66rem 0;
   width: 50% !important; }
 
+.top-tags-widget .top-tags,
+.widget_archive ul,
+.widget_categories ul {
+  font-size: 1rem;
+  line-height: 2em;
+  margin: .8em; }
+
+.top-tags-widget .tags,
+.widget_archive > ul,
+.widget_categories > ul {
+  list-style: none;
+  margin: 0;
+  overflow: hidden;
+  padding: 0; }
+
+.widget_archive > ul,
+.widget_categories > ul {
+  margin: .8em; }
+
+.top-tags-widget .tags li,
+.widget_archive > ul > li,
+.widget_categories > ul > li {
+  background-color: #e6e6e6;
+  border-color: #e6e6e6;
+  border-style: solid;
+  border-width: 1px;
+  color: #ccc;
+  font-size: 1em;
+  margin-bottom: .5em;
+  padding: 0; }
+
+.widget_archive > ul > li,
+.widget_categories > ul > li {
+  color: #e6e6e6; }
+
+.top-tags-widget .tag,
+.widget_archive > ul > li > a,
+.widget_categories > ul > li > a {
+  background: #fff;
+  color: #1330bf;
+  display: inline-block;
+  height: 2em;
+  line-height: 2em;
+  padding: 0 1.5em 0 .66em;
+  position: relative;
+  text-decoration: none;
+  transition: all 0.2s; }
+
+.top-tags-widget .tag::after,
+.widget_archive > ul > li > a::after,
+.widget_categories > ul > li > a::after {
+  background: #e6e6e6;
+  border-bottom: 1em solid transparent;
+  border-left: 1em solid #fff;
+  border-top: 1em solid transparent;
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: all 0.2s; }
+
+.top-tags-widget .tag:hover,
+.widget_archive > ul > li > a:hover,
+.widget_categories > ul > li > a:hover {
+  background-color: #d41010;
+  color: #fff;
+  text-decoration: none;
+  transition: all 0.2s; }
+
+.top-tags-widget .tag:hover::after,
+.widget_archive > ul > li > a:hover::after,
+.widget_categories > ul > li > a:hover::after {
+  border-left-color: #d41010;
+  transition: all 0.2s; }
+
+.top-tags-widget .tag-count,
+.widget_archive > ul > li > *:not(a),
+.widget_categories > ul > li > *:not(a) {
+  color: #999;
+  float: right;
+  font-size: .75em;
+  font-weight: 300;
+  padding-right: .66rem;
+  text-decoration: none;
+  text-transform: uppercase; }
+
 /* comments **************************************************************************************/
 ol.comment-list {
   list-style: none;
