Minor text widget margin fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -1415,6 +1415,7 @@ p.excerpt-meta .excerpt-author {
 .sidebar-widget .textwidget {
 	font-size: 15px;
 	line-height: 1.66;
+	margin: 0 .8rem;
 }
 
 .sidebar-widget .textwidget img.alignleft {
