--- a/style.css
+++ b/style.css
@@ -1739,7 +1739,8 @@ p.excerpt-meta .excerpt-author {
 
 .sidebar-widget .textwidget {
   font-size: 15px;
-  line-height: 1.66; }
+  line-height: 1.66;
+  margin: 0 .8rem; }
 
 .sidebar-widget .textwidget img.alignleft {
   float: left;
