Fixed a bug where pub date was not shown if "hide author" option is true

--- a/css/style.scss
+++ b/css/style.scss
@@ -186,6 +186,7 @@ article > content .comments {
 
 
 article > content .article-author,
+article > content .pubdate-no-author,
 article > content .article-share,
 article > content .article-body,
 article > content .article-categories,
